# pub-ijar-learning_cascades

./: README.md  plots.ipynb  plots_alternatives.ipynb  pyproject.toml
data/: adult.csv  breast.csv  heart.csv
data/create/: adult.ipynb  breast.ipynb  heart.ipynb
experiments/: balanced_class_weights.py  experiment_feature_cascades.py  experiment_score_cascades.py  experiment_utils.py  precision_recall.ipynb  searchspace_and_greedy_optimality.py
experiments/slim-hyperparam-sweep/: Hyperparametersensitivity.ipynb  covid score3.csv  covid score3.db  hyperoptsensitivity.py  thorax score3.csv  thorax score3.db
results/: results_adult_features.csv  results_breast_features.csv  results_covid_features.csv  results_heart_features.csv  results_thorax_features.csv
